-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.5.1
-
None
-
OSX El Capitan, Android SDK 19/21, NDK r10e
Only observed this bug on OSX El Capitan with Qt 5.5.1 and Qt 5.6 beta.
Created project are missing 2 things:
1) Not automatically adding the line to gradle-wrapper.properties:
distributionUrl=http\://services.gradle.org/distributions/gradle-2.2.1-all.zip
Must manually do it.
2) Sometimes "Copy gradle files to android" does not create a gradle.properties file.
That file contains:
## This file is automatically generated by QtCreator. # # This file must *NOT* be checked into Version Control Systems, # as it contains information specific to your local configuration. androidBuildToolsVersion=23.0.2 androidCompileSdkVersion=21 buildDir=.build qt5AndroidDir=/macdev/qt55/5.5/android_armv7/src/android/java
Sometimes, you get this error:
/macdev/qdev/legacy/testsplash/android/build.gradle Error:(37, 1) A problem occurred evaluating root project 'android'. > Could not find property 'androidCompileSdkVersion' on com.android.build.gradle.AppExtension_Decorated@4d128d7e.
Attached 2 projects, testgradle to show correct construction of "Copy gradle files" with gradle.properties exists. testsplash that was auto-created without the gradle.properties file. You would think script files would auto-generate the gradle.properties file correctly, but that is not the case.