Android: update gradle wrapper properties

We need to call it when QmakeProject emits proFilesEvaluated to be sure
AndroidPackageSourceDir is set.

Task-number: QTCREATORBUG-15568
Change-Id: Ia70e0cff1b5fb8f2003ba2c2799a694873b2ad19
Reviewed-by: Tobias Hunger <tobias.hunger@theqtcompany.com>
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@theqtcompany.com>